Exemplo PLY - PLH/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DEFAULT

Grammar

Rule 0     S' -> task_definition
Rule 1     task_definition -> task_signature task_definition
Rule 2     task_definition -> task_signature
Rule 3     task_signature -> ID L_PAREN parameter_list R_PAREN statement
Rule 4     parameter_list -> ID COMMA parameter_list
Rule 5     parameter_list -> ID
Rule 6     parameter_list -> empty
Rule 7     loop_statement -> LOOP expression statement
Rule 8     loop_statement -> LOOP ID COMMA expression COMMA value statement
Rule 9     loop_statement -> LOOP ID COMMA expression statement
Rule 10    condition_statement -> expression QUESTION statement more_condition
Rule 11    more_condition -> OR binary_expression QUESTION statement more_condition
Rule 12    more_condition -> COLON statement
Rule 13    more_condition -> empty
Rule 14    value_list -> value_list COMMA expression
Rule 15    value_list -> expression
Rule 16    value_list -> empty
Rule 17    expression -> binary_expression
Rule 18    expression -> list_rem
Rule 19    expression -> hash_def
Rule 20    expression -> hash_rem
Rule 21    list_rem -> ID L_BRACKET OR value R_BRACKET
Rule 22    list_rem -> ID L_BRACKET value OR R_BRACKET
Rule 23    list_rem -> ID L_BRACKET value OR value R_BRACKET
Rule 24    binary_expression -> binary_expression operator binary_expression
Rule 25    binary_expression -> L_PAREN binary_expression R_PAREN
Rule 26    binary_expression -> unary_operator binary_expression
Rule 27    binary_expression -> value
Rule 28    list_req -> ID list_req_access
Rule 29    list_req_access -> L_BRACKET binary_expression R_BRACKET list_req_access
Rule 30    list_req_access -> L_BRACKET binary_expression R_BRACKET
Rule 31    operator -> binary_operator
Rule 32    operator -> relational_operator
Rule 33    statement -> expression_statement SEMICOLON
Rule 34    statement -> compound_statement
Rule 35    statement -> loop_statement
Rule 36    statement -> condition_statement
Rule 37    statement -> return_command
Rule 38    statement -> free_function SEMICOLON
Rule 39    statement -> import_function SEMICOLON
Rule 40    statement -> external_call SEMICOLON
Rule 41    statement -> task_call SEMICOLON
Rule 42    statement -> loop_flows SEMICOLON
Rule 43    external_call -> ID DOT task_call
Rule 44    expression_statement -> ID assignment_operator expression
Rule 45    expression_statement -> list_req assignment_operator expression
Rule 46    assignment_operator -> ASSIGN
Rule 47    assignment_operator -> MUL_ASSIGN
Rule 48    assignment_operator -> DIV_ASSIGN
Rule 49    assignment_operator -> ADD_ASSIGN
Rule 50    assignment_operator -> SUB_ASSIGN
Rule 51    assignment_operator -> EXP_ASSIGN
Rule 52    assignment_operator -> LEFT_ASSIGN
Rule 53    assignment_operator -> RIGHT_ASSIGN
Rule 54    assignment_operator -> AND_ASSIGN
Rule 55    assignment_operator -> OR_ASSIGN
Rule 56    assignment_operator -> XOR_ASSIGN
Rule 57    assignment_operator -> MOD_ASSIGN
Rule 58    compound_statement -> L_BRACE R_BRACE
Rule 59    compound_statement -> L_BRACE statement_list R_BRACE
Rule 60    statement_list -> statement_list statement
Rule 61    statement_list -> statement
Rule 62    loop_flows -> CONTINUE
Rule 63    loop_flows -> BREAK
Rule 64    import_function -> ID ASSIGN IMPORT L_PAREN STR R_PAREN
Rule 65    import_function -> IMPORT L_PAREN ID R_PAREN
Rule 66    free_function -> ID ASSIGN FREE L_PAREN ID R_PAREN
Rule 67    return_command -> RETURN L_PAREN expression R_PAREN SEMICOLON
Rule 68    list_def -> L_BRACKET binary_expression COLON binary_expression R_BRACKET
Rule 69    list_def -> L_BRACKET value_list R_BRACKET
Rule 70    hash_def -> L_BRACE key_value_list R_BRACE
Rule 71    hash_rem -> value REM list_def
Rule 72    key_value_list -> key_value_list COMMA value COLON expression
Rule 73    key_value_list -> value COLON expression
Rule 74    key_value_list -> empty
Rule 75    task_call -> ID L_PAREN value_list R_PAREN
Rule 76    value -> ID
Rule 77    value -> INT
Rule 78    value -> FLOAT
Rule 79    value -> STR
Rule 80    value -> task_call
Rule 81    value -> list_req
Rule 82    value -> external_call
Rule 83    value -> list_def
Rule 84    value -> LEN value
Rule 85    value -> NULL
Rule 86    unary_operator -> ADD
Rule 87    unary_operator -> SUB
Rule 88    unary_operator -> NOT
Rule 89    binary_operator -> ADD
Rule 90    binary_operator -> SUB
Rule 91    binary_operator -> MUL
Rule 92    binary_operator -> DIV
Rule 93    binary_operator -> EXP
Rule 94    binary_operator -> AND
Rule 95    binary_operator -> OR
Rule 96    binary_operator -> XOR
Rule 97    binary_operator -> MOD
Rule 98    binary_operator -> RIGHT_OP
Rule 99    binary_operator -> LEFT_OP
Rule 100   relational_operator -> NOT_OP
Rule 101   relational_operator -> AND_OP
Rule 102   relational_operator -> OR_OP
Rule 103   relational_operator -> LE_OP
Rule 104   relational_operator -> GE_OP
Rule 105   relational_operator -> EQ_OP
Rule 106   relational_operator -> NE_OP
Rule 107   relational_operator -> MAJOR
Rule 108   relational_operator -> MINOR
Rule 109   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 86 89
ADD_ASSIGN           : 49
AND                  : 94
AND_ASSIGN           : 54
AND_OP               : 101
ASSIGN               : 46 64 66
BREAK                : 63
COLON                : 12 68 72 73
COMMA                : 4 8 8 9 14 72
CONTINUE             : 62
DEFAULT              : 
DIV                  : 92
DIV_ASSIGN           : 48
DOT                  : 43
EQ_OP                : 105
EXP                  : 93
EXP_ASSIGN           : 51
FLOAT                : 78
FREE                 : 66
GE_OP                : 104
ID                   : 3 4 5 8 9 21 22 23 28 43 44 64 65 66 66 75 76
IMPORT               : 64 65
INT                  : 77
LEFT_ASSIGN          : 52
LEFT_OP              : 99
LEN                  : 84
LE_OP                : 103
LOOP                 : 7 8 9
L_BRACE              : 58 59 70
L_BRACKET            : 21 22 23 29 30 68 69
L_PAREN              : 3 25 64 65 66 67 75
MAJOR                : 107
MINOR                : 108
MOD                  : 97
MOD_ASSIGN           : 57
MUL                  : 91
MUL_ASSIGN           : 47
NE_OP                : 106
NOT                  : 88
NOT_OP               : 100
NULL                 : 85
OR                   : 11 21 22 23 95
OR_ASSIGN            : 55
OR_OP                : 102
QUESTION             : 10 11
REM                  : 71
RETURN               : 67
RIGHT_ASSIGN         : 53
RIGHT_OP             : 98
R_BRACE              : 58 59 70
R_BRACKET            : 21 22 23 29 30 68 69
R_PAREN              : 3 25 64 65 66 67 75
SEMICOLON            : 33 38 39 40 41 42 67
STR                  : 64 79
SUB                  : 87 90
SUB_ASSIGN           : 50
XOR                  : 96
XOR_ASSIGN           : 56
error                : 

Nonterminals, with rules where they appear

assignment_operator  : 44 45
binary_expression    : 11 17 24 24 25 26 29 30 68 68
binary_operator      : 31
compound_statement   : 34
condition_statement  : 36
empty                : 6 13 16 74
expression           : 7 8 9 10 14 15 44 45 67 72 73
expression_statement : 33
external_call        : 40 82
free_function        : 38
hash_def             : 19
hash_rem             : 20
import_function      : 39
key_value_list       : 70 72
list_def             : 71 83
list_rem             : 18
list_req             : 45 81
list_req_access      : 28 29
loop_flows           : 42
loop_statement       : 35
more_condition       : 10 11
operator             : 24
parameter_list       : 3 4
relational_operator  : 32
return_command       : 37
statement            : 3 7 8 9 10 11 12 60 61
statement_list       : 59 60
task_call            : 41 43 80
task_definition      : 1 0
task_signature       : 1 2
unary_operator       : 26
value                : 8 21 22 23 23 27 71 72 73 84
value_list           : 14 69 75

Parsing method: LALR

state 0

    (0) S' -> . task_definition
    (1) task_definition -> . task_signature task_definition
    (2) task_definition -> . task_signature
    (3) task_signature -> . ID L_PAREN parameter_list R_PAREN statement

    ID              shift and go to state 2

    task_definition                shift and go to state 1
    task_signature                 shift and go to state 3

state 1

    (0) S' -> task_definition .



state 2

    (3) task_signature -> ID . L_PAREN parameter_list R_PAREN statement

    L_PAREN         shift and go to state 4


state 3

    (1) task_definition -> task_signature . task_definition
    (2) task_definition -> task_signature .
    (1) task_definition -> . task_signature task_definition
    (2) task_definition -> . task_signature
    (3) task_signature -> . ID L_PAREN parameter_list R_PAREN statement

    $end            reduce using rule 2 (task_definition -> task_signature .)
    ID              shift and go to state 2

    task_definition                shift and go to state 5
    task_signature                 shift and go to state 3

state 4

    (3) task_signature -> ID L_PAREN . parameter_list R_PAREN statement
    (4) parameter_list -> . ID COMMA parameter_list
    (5) parameter_list -> . ID
    (6) parameter_list -> . empty
    (109) empty -> .

    ID              shift and go to state 8
    R_PAREN         reduce using rule 109 (empty -> .)

    parameter_list                 shift and go to state 7
    empty                          shift and go to state 6

state 5

    (1) task_definition -> task_signature task_definition .

    $end            reduce using rule 1 (task_definition -> task_signature task_definition .)


state 6

    (6) parameter_list -> empty .

    R_PAREN         reduce using rule 6 (parameter_list -> empty .)


state 7

    (3) task_signature -> ID L_PAREN parameter_list . R_PAREN statement

    R_PAREN         shift and go to state 9


state 8

    (4) parameter_list -> ID . COMMA parameter_list
    (5) parameter_list -> ID .

    COMMA           shift and go to state 10
    R_PAREN         reduce using rule 5 (parameter_list -> ID .)


state 9

    (3) task_signature -> ID L_PAREN parameter_list R_PAREN . statement
    (33) statement -> . expression_statement SEMICOLON
    (34) statement -> . compound_statement
    (35) statement -> . loop_statement
    (36) statement -> . condition_statement
    (37) statement -> . return_command
    (38) statement -> . free_function SEMICOLON
    (39) statement -> . import_function SEMICOLON
    (40) statement -> . external_call SEMICOLON
    (41) statement -> . task_call SEMICOLON
    (42) statement -> . loop_flows SEMICOLON
    (44) expression_statement -> . ID assignment_operator expression
    (45) expression_statement -> . list_req assignment_operator expression
    (58) compound_statement -> . L_BRACE R_BRACE
    (59) compound_statement -> . L_BRACE statement_list R_BRACE
    (7) loop_statement -> . LOOP expression statement
    (8) loop_statement -> . LOOP ID COMMA expression COMMA value statement
    (9) loop_statement -> . LOOP ID COMMA expression statement
    (10) condition_statement -> . expression QUESTION statement more_condition
    (67) return_command -> . RETURN L_PAREN expression R_PAREN SEMICOLON
    (66) free_function -> . ID ASSIGN FREE L_PAREN ID R_PAREN
    (64) import_function -> . ID ASSIGN IMPORT L_PAREN STR R_PAREN
    (65) import_function -> . IMPORT L_PAREN ID R_PAREN
    (43) external_call -> . ID DOT task_call
    (75) task_call -> . ID L_PAREN value_list R_PAREN
    (62) loop_flows -> . CONTINUE
    (63) loop_flows -> . BREAK
    (28) list_req -> . ID list_req_access
    (17) expression -> . binary_expression
    (18) expression -> . list_rem
    (19) expression -> . hash_def
    (20) expression -> . hash_rem
    (24) binary_expression -> . binary_expression operator binary_expression
    (25) binary_expression -> . L_PAREN binary_expression R_PAREN
    (26) binary_expression -> . unary_operator binary_expression
    (27) binary_expression -> . value
    (21) list_rem -> . ID L_BRACKET OR value R_BRACKET
    (22) list_rem -> . ID L_BRACKET value OR R_BRACKET
    (23) list_rem -> . ID L_BRACKET value OR value R_BRACKET
    (70) hash_def -> . L_BRACE key_value_list R_BRACE
    (71) hash_rem -> . value REM list_def
    (86) unary_operator -> . ADD
    (87) unary_operator -> . SUB
    (88) unary_operator -> . NOT
    (76) value -> . ID
    (77) value -> . INT
    (78) value -> . FLOAT
    (79) value -> . STR
    (80) value -> . task_call
    (81) value -> . list_req
    (82) value -> . external_call
    (83) value -> . list_def
    (84) value -> . LEN value
    (85) value -> . NULL
    (68) list_def -> . L_BRACKET binary_expression COLON binary_expression R_BRACKET
    (69) list_def -> . L_BRACKET value_list R_BRACKET

    ID              shift and go to state 32
    L_BRACE         shift and go to state 36
    LOOP            shift and go to state 46
    RETURN          shift and go to state 47
    IMPORT          shift and go to state 35
    CONTINUE        shift and go to state 41
    BREAK           shift and go to state 14
    L_PAREN         shift and go to state 34
    ADD             shift and go to state 39
    SUB             shift and go to state 38
    NOT             shift and go to state 44
    INT             shift and go to state 20
    FLOAT           shift and go to state 22
    STR             shift and go to state 45
    LEN             shift and go to state 40
    NULL            shift and go to state 23
    L_BRACKET       shift and go to state 13

    expression_statement           shift and go to state 33
    unary_operator                 shift and go to state 11
    return_command                 shift and go to state 19
    list_rem                       shift and go to state 18
    expression                     shift and go to state 15
    hash_rem                       shift and go to state 27
    loop_flows                     shift and go to state 17
    compound_statement             shift and go to state 12
    import_function                shift and go to state 37
    value                          shift and go to state 21
    statement                      shift and go to state 24
    hash_def                       shift and go to state 25
    list_req                       shift and go to state 26
    free_function                  shift and go to state 43
    task_call                      shift and go to state 28
    binary_expression              shift and go to state 29
    condition_statement            shift and go to state 30
    loop_statement                 shift and go to state 31
    external_call                  shift and go to state 42
    list_def                       shift and go to state 16

state 10

    (4) parameter_list -> ID COMMA . parameter_list
    (4) parameter_list -> . ID COMMA parameter_list
    (5) parameter_list -> . ID
    (6) parameter_list -> . empty
    (109) empty -> .

    ID              shift and go to state 8
    R_PAREN         reduce using rule 109 (empty -> .)

    parameter_list                 shift and go to state 48
    empty                          shift and go to state 6

state 11

    (26) binary_expression -> unary_operator . binary_expression
    (24) binary_expression -> . binary_expression operator binary_expression
    (25) binary_expression -> . L_PAREN binary_expression R_PAREN
    (26) binary_expression -> . unary_operator binary_expression
    (27) binary_expression -> . value
    (86) unary_operator -> . ADD
    (87) unary_operator -> . SUB
    (88) unary_operator -> . NOT
    (76) value -> . ID
    (77) value -> . INT
    (78) value -> . FLOAT
    (79) value -> . STR
    (80) value -> . task_call
    (81) value -> . list_req
    (82) value -> . external_call
    (83) value -> . list_def
    (84) value -> . LEN value
    (85) value -> . NULL
    (75) task_call -> . ID L_PAREN value_list R_PAREN
    (28) list_req -> . ID list_req_access
    (43) external_call -> . ID DOT task_call
    (68) list_def -> . L_BRACKET binary_expression COLON binary_expression R_BRACKET
    (69) list_def -> . L_BRACKET value_list R_BRACKET

    L_PAREN         shift and go to state 34
    ADD             shift and go to state 39
    SUB             shift and go to state 38
    NOT             shift and go to state 44
    ID              shift and go to state 53
    INT             shift and go to state 20
    FLOAT           shift and go to state 22
    STR             shift and go to state 45
    LEN             shift and go to state 40
    NULL            shift and go to state 23
    L_BRACKET       shift and go to state 13

    value                          shift and go to state 49
    unary_operator                 shift and go to state 11
    list_def                       shift and go to state 16
    list_req                       shift and go to state 50
    external_call                  shift and go to state 54
    task_call                      shift and go to state 51
    binary_expression              shift and go to state 52

state 12

    (34) statement -> compound_statement .

    OR              reduce using rule 34 (statement -> compound_statement .)
    COLON           reduce using rule 34 (statement -> compound_statement .)
    ID              reduce using rule 34 (statement -> compound_statement .)
    $end            reduce using rule 34 (statement -> compound_statement .)
    R_BRACE         reduce using rule 34 (statement -> compound_statement .)
    L_BRACE         reduce using rule 34 (statement -> compound_statement .)
    LOOP            reduce using rule 34 (statement -> compound_statement .)
    RETURN          reduce using rule 34 (statement -> compound_statement .)
    IMPORT          reduce using rule 34 (statement -> compound_statement .)
    CONTINUE        reduce using rule 34 (statement -> compound_statement .)
    BREAK           reduce using rule 34 (statement -> compound_statement .)
    L_PAREN         reduce using rule 34 (statement -> compound_statement .)
    ADD             reduce using rule 34 (statement -> compound_statement .)
    SUB             reduce using rule 34 (statement -> compound_statement .)
    NOT             reduce using rule 34 (statement -> compound_statement .)
    INT             reduce using rule 34 (statement -> compound_statement .)
    FLOAT           reduce using rule 34 (statement -> compound_statement .)
    STR             reduce using rule 34 (statement -> compound_statement .)
    LEN             reduce using rule 34 (statement -> compound_statement .)
    NULL            reduce using rule 34 (statement -> compound_statement .)
    L_BRACKET       reduce using rule 34 (statement -> compound_statement .)


state 13

    (68) list_def -> L_BRACKET . binary_expression COLON binary_expression R_BRACKET
    (69) list_def -> L_BRACKET . value_list R_BRACKET
    (24) binary_expression -> . binary_expression operator binary_expression
    (25) binary_expression -> . L_PAREN binary_expression R_PAREN
    (26) binary_expression -> . unary_operator binary_expression
    (27) binary_expression -> . value
    (14) value_list -> . value_list COMMA expression
    (15) value_list -> . expression
    (16) value_list -> . empty
    (86) unary_operator -> . ADD
    (87) unary_operator -> . SUB
    (88) unary_operator -> . NOT
    (76) value -> . ID
    (77) value -> . INT
    (78) value -> . FLOAT
    (79) value -> . STR
    (80) value -> . task_call
    (81) value -> . list_req
    (82) value -> . external_call
    (83) value -> . list_def
    (84) value -> . LEN value
    (85) value -> . NULL
    (17) expression -> . binary_expression
    (18) expression -> . list_rem
    (19) expression -> . hash_def
    (20) expression -> . hash_rem
    (109) empty -> .
    (75) task_call -> . ID L_PAREN value_list R_PAREN
    (28) list_req -> . ID list_req_access
    (43) external_call -> . ID DOT task_call
    (68) list_def -> . L_BRACKET binary_expression COLON binary_expression R_BRACKET
    (69) list_def -> . L_BRACKET value_list R_BRACKET
    (21) list_rem -> . ID L_BRACKET OR value R_BRACKET
    (22) list_rem -> . ID L_BRACKET value OR R_BRACKET
    (23) list_rem -> . ID L_BRACKET value OR value R_BRACKET
    (70) hash_def -> . L_BRACE key_value_list R_BRACE
    (71) hash_rem -> . value REM list_def

    L_PAREN         shift and go to state 34
    ADD             shift and go to state 39
    SUB             shift and go to state 38
    NOT             shift and go to state 44
    ID              shift and go to state 58
    INT             shift and go to state 20
    FLOAT           shift and go to state 22
    STR             shift and go to state 45
    LEN             shift and go to state 40
    NULL            shift and go to state 23
    R_BRACKET       reduce using rule 109 (empty -> .)
    COMMA           reduce using rule 109 (empty -> .)
    L_BRACKET       shift and go to state 13
    L_BRACE         shift and go to state 55

    value                          shift and go to state 21
    unary_operator                 shift and go to state 11
    empty                          shift and go to state 59
    hash_def                       shift and go to state 25
    list_req                       shift and go to state 50
    hash_rem                       shift and go to state 27
    task_call                      shift and go to state 51
    binary_expression              shift and go to state 60
    list_def                       shift and go to state 16
    list_rem                       shift and go to state 18
    expression                     shift and go to state 56
    value_list                     shift and go to state 57
    external_call                  shift and go to state 54

state 14

    (63) loop_flows -> BREAK .

    SEMICOLON       reduce using rule 63 (loop_flows -> BREAK .)


state 15

    (10) condition_statement -> expression . QUESTION statement more_condition

    QUESTION        shift and go to state 61


state 16

    (83) value -> list_def .

    REM             reduce using rule 83 (value -> list_def .)
    ADD             reduce using rule 83 (value -> list_def .)
    SUB             reduce using rule 83 (value -> list_def .)
    MUL             reduce using rule 83 (value -> list_def .)
    DIV             reduce using rule 83 (value -> list_def .)
    EXP             reduce using rule 83 (value -> list_def .)
    AND             reduce using rule 83 (value -> list_def .)
    OR              reduce using rule 83 (value -> list_def .)
    XOR             reduce using rule 83 (value -> list_def .)
    MOD             reduce using rule 83 (value -> list_def .)
    RIGHT_OP        reduce using rule 83 (value -> list_def .)
    LEFT_OP         reduce using rule 83 (value -> list_def .)
    NOT_OP          reduce using rule 83 (value -> list_def .)
    AND_OP          reduce using rule 83 (value -> list_def .)
    OR_OP           reduce using rule 83 (value -> list_def .)
    LE_OP           reduce using rule 83 (value -> list_def .)
    GE_OP           reduce using rule 83 (value -> list_def .)
    EQ_OP           reduce using rule 83 (value -> list_def .)
    NE_OP           reduce using rule 83 (value -> list_def .)
    MAJOR           reduce using rule 83 (value -> list_def .)
    MINOR           reduce using rule 83 (value -> list_def .)
    QUESTION        reduce using rule 83 (value -> list_def .)
    R_BRACKET       reduce using rule 83 (value -> list_def .)
    R_PAREN         reduce using rule 83 (value -> list_def .)
    COMMA           reduce using rule 83 (value -> list_def .)
    COLON           reduce using rule 83 (value -> list_def .)
    ID              reduce using rule 83 (value -> list_def .)
    L_BRACE         reduce using rule 83 (value -> list_def .)
    LOOP            reduce using rule 83 (value -> list_def .)
    RETURN          reduce using rule 83 (value -> list_def .)
    IMPORT          reduce using rule 83 (value -> list_def .)
    CONTINUE        reduce using rule 83 (value -> list_def .)
    BREAK           reduce using rule 83 (value -> list_def .)
    L_PAREN         reduce using rule 83 (value -> list_def .)
    NOT             reduce using rule 83 (value -> list_def .)
    INT             reduce using rule 83 (value -> list_def .)
    FLOAT           reduce using rule 83 (value -> list_def .)
    STR             reduce using rule 83 (value -> list_def .)
    LEN             reduce using rule 83 (value -> list_def .)
    NULL            reduce using rule 83 (value -> list_def .)
    L_BRACKET       reduce using rule 83 (value -> list_def .)
    SEMICOLON       reduce using rule 83 (value -> list_def .)
    R_BRACE         reduce using rule 83 (value -> list_def .)


state 17

    (42) statement -> loop_flows . SEMICOLON

    SEMICOLON       shift and go to state 62


state 18

    (18) expression -> list_rem .
